2005-10-06  Mike Taylor <bear@code-bear.com>

  * Contact
    added my contact info as co-maintainer

  * src/bin/tinder.cgi
    fixed minor spelling mistake s/Regnerate/Regenerate/
    bug 231057 reported by David Costanzo

New Time columns for use in environments with multiple time zones.

Spelling fixes 

Add support for popup windows which work "on click"

Add support for users who want to see tinderbox's notion of what was
checked in not just Bonsai's query.	

Add support for historical Tinderbox images
	(flames, stars)

Mozilla layout preferences are now 
standard 
(non uniform row spacing, 
 truly empty cells, 
 legend on bottom of page).
	
Allow users to backdate notices

automate regeneration of HTML when user uses CGI 
interface
	
Put the C in all build cells.

VC code did the wrong thing when generating old pages and there was
no TreeState data.

Fix Spelling mistakes throughout code.	
	
Add support for build machines to tell the server to add text/links 
into build cells (TinderboxPrint).

When builds are started too frequently (more then once every five minutes) 
newest build is now kept and oldest build is thrown away.
	
New Configure script contributed by Stephen Lamm (slamm@yahoo-inc.com)
This includes a fix to allow Perl to be in different locations on the 
machine where make is run and on the machine where the webserver runs.
	
Now it is possible to include the time column on the left and right 
side of the status table.

There is now a working Perforce module for those who use this product
instead of CVS.

There is a module to interface with the req ticketing system.
	
New Summary format and number of errors displayed on build page by
        Adam Di Carlo <adam@onshore-devel.com>,

Spelling and consistency fixes from:
	Adam Di Carlo <adam@onshore-devel.com>, 
	Orion Poplawski <OPoplawski@cqg.com>,
	John L. Villanlovos <john.l.villalovos@intel.com>,

Change HTML generation so that the text browser 'links' 